# sample_streamlit-app

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  pyproject.toml  snowflake.yml  spec.yml  streamlit_app.py
.claude/: settings.json
.claude/commands/: expert-review.md  generate-manual.md  generate-spec.md
.githooks/: pre-push
.github/workflows/: ci-cd.yml
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/operations/: deployment-plan.md
aidlc-docs/reviews/: review-20260423-163000.md  review-20260423-170000.md  review-20260424-124900.md  review-20260429-001500.md
backend/: pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  dependencies.py  main.py  schemas.py
backend/tests/: conftest.py  test_auth.py  test_delivery.py  test_inventory.py  test_orders.py  test_validators.py
docker/: Dockerfile  entrypoint.sh  nginx.conf
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  vite-env.d.ts
scripts/: pre-push-checks.sh
sql/: seed.sql  setup.sql  setup_container_services.sql  setup_dev.sql  setup_prod.sql
src/: app.py
src/components/: alerts.py  charts.py  common.py
src/dal/: auth.py  delivery.py  inventory.py  orders.py  session.py  utils.py
src/pages/: driver_delivery.py  manager_dashboard.py  manager_delivery.py  manager_orders.py  privacy_consent.py
src/utils/: constants.py  validators.py
tests/: conftest.py
tests/unit/: test_app.py  test_components.py  test_dal_auth.py  test_dal_delivery.py  test_dal_inventory.py  test_dal_orders.py  test_pages_consent.py  test_pages_dashboard.py  (+5 more)
(+43 files in other folders)
